Took off free lance section

--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ button {
 ==================*/
 
 .bg_cta_personal_img {
-    background-image: url(../images/bg_cta_cover.jpg);
+    background-image: url(../images/water-back.jpg);
     position: relative;
     background-size: cover;
     background-position: center center;
