--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,14 @@ button {
 .btn_outline_custom {
     border: 2px solid #f5f5f5;
 }
+.btn_outline_custom_2 {
+    border: 2px solid #ab0a27;
+    background-color: #ab0a27;
+}
+.btn_outline_custom_3 {
+    border: 2px solid black;
+    background-color: black;
+}
 
 .btn_outline_custom:hover,
 .btn_outline_custom:focus,
