--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ a:focus,
 button {
     text-decoration: none !important;
     outline: none !important;
+    color: black;
 }
 
 ::selection {
@@ -155,12 +156,23 @@ button {
     border: 2px solid #f5f5f5;
 }
 .btn_outline_custom_2 {
+    border-radius: 35px;
     border: 2px solid #ab0a27;
     background-color: #ab0a27;
 }
+.btn_outline_custom_2:hover {
+    border: 2px solid #df1036;
+    background-color: #df1036;
+}
+
 .btn_outline_custom_3 {
+    border-radius: 35px;
     border: 2px solid black;
     background-color: black;
+}
+.btn_outline_custom_3:hover {
+    border: 2px solid black;
+    background-color: white;
 }
 
 .btn_outline_custom:hover,
@@ -563,6 +575,8 @@ button {
 }
 
 .work_item .work_detail {
+    display: flex;
+    flex-direction: column;
     height: 100%;
     position: absolute;
     background-color: #fbfbfb;
